.next/dev/logs/next-development.log
[00:00:00.432] Server  LOG     
[00:00:00.432] Server  LOG        We detected TypeScript in your project and created a tsconfig.json file for you.
[00:00:00.488] Server  LOG      ✓ Ready in 313ms
[00:03:02.745] Server  ERROR    ⨯ ./src/app/global.css
Error evaluating Node.js code
CssSyntaxError: /workspace/src/app/global.css:1:1: The `outline-ring/50` class does not exist. If `outline-ring/50` is a custom class, make sure it is defined within a `@layer` directive.
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at AtRule.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at processApply (/workspace/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:380:29)]
    [at /workspace/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:551:9]
    [at /workspace/node_modules/tailwindcss/lib/processTailwindFeatures.js:55:50]
    [at async plugins (/workspace/node_modules/tailwindcss/lib/plugin.js:38:17)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./src/app/global.css [Client Component Browser]
    ./src/app/page.tsx [Client Component Browser]
    ./src/app/page.tsx [Server Component]



./src/app/layout.tsx:1:1
Module not found: Can't resolve './globals.css'
> 1 | import "./globals.css";
    | ^^^^^^^^^^^^^^^^^^^^^^^
  2 |
  3 | export default function RootLayout({
  4 |   children,



https://nextjs.org/docs/messages/module-not-found


[00:04:05.378] Server  LOG      ✓ Compiled in 436ms
